packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__pagination_many_pages_narrow.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                        "
" NX    Running Many Pages Test...       "
"                                        "
">   ·  task52                           "
"                                        "
"  ← 50/101 →            quit: q  help: ?"
