packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__pagination_many_pages_narrow_with_cloud_message.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                        "
" NX    Running Many Pages Tes   Duration"
"                                        "
"  The remote cache will not be read f..."
"                                        "
"  ← 50/101 →            quit: q  help: ?"
