packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__pagination_many_pages_wide_with_cloud_message.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Running Many Pages Test...                                                                  Cache        Duration"
"                                                                                                                        "
">   ·  task52                                                                                        ...             ..."
"                                                                                                                        "
"  ← 50/101 →  The remote cache will not be read from or written to during this run.                     quit: q  help: ?"
