packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__pagination_page1.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Running Many Tasks...                                                                       Cache        Duration"
" │                                                                                                                      "
" │·    Waiting for task...                                                                                              "
" │·    Waiting for task...                                                                                              "
" └                                                                                                                      "
">   ·  task1                                                                                         ...             ..."
"    ·  task10                                                                                        ...             ..."
"    ·  task11                                                                                        ...             ..."
"    ·  task12                                                                                        ...             ..."
"    ·  task2                                                                                         ...             ..."
"    ·  task3                                                                                         ...             ..."
"    ·  task4                                                                                         ...             ..."
"                                                                                                                        "
"  ← 1/2 →                           quit: q  help: ?  navigate: ↑ ↓  filter: /  pin output: 1 or 2  show output: <enter>"
