packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__parallel_section_visibility_with_filtered_tasks.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Running Test Tasks...                                                                            Cache   Duration"
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"  Filter: task3                                                                                                         "
"  -> 3 tasks filtered out. Press / to persist, <esc> to clear                                                           "
