packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__pinned_tasks_with_narrow_width.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
assertion_line: 3694
expression: terminal.backend()
---
"                                        "
" NX    Running Test Tasks...    Duration"
"                                        "
"                                        "
"> ·    app1:build                    ..."
"  ·    app1:test [1]                 ..."
"  ·    app2:lint                     ..."
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
