packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__readiness_words_full_width.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                "
" NX    Test Tasks                                               Cache   Duration"
" │                                                                              "
">│⠋    api:serve (not ready)                                        - Continuous"
" │⠋    db:up (ready)                                                - Continuous"
" │⠋    shop:serve (readiness failed)                                - Continuous"
" │⠋    éééééé:serve (ready)                                         - Continuous"
" └                                                                              "
"  ·    shop-e2e:e2e (waiting)                                     ...        ..."
"                                                                                "
